--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -400,7 +400,7 @@ function setupSpeechRecognition() {
             }
         });
 
-       // Inicialização da Conversa
+   // Inicialização da Conversa
 async function initializeConversation() {
     firebase.auth().onAuthStateChanged(async (user) => {
         if (user) {
@@ -421,16 +421,17 @@ async function initializeConversation() {
                 chatHistory = data.chatHistory || [];
                 messageElement.innerText = data.response;
 
-                messageElement.style.visibility = "hidden";
-
+                // Exibe o botão "Press to Start" ao carregar
                 speakButton.style.display = "block";
+                speakButton.innerText = "Press to Start";
 
+                // Garante que o botão é inicializado apenas uma vez
                 if (!speakButton.hasAttribute('data-initialized')) {
                     speakButton.setAttribute('data-initialized', 'true');
 
                     speakButton.addEventListener("click", () => {
                         if (speakButton.innerText === "Press to Start") {
-                            // Estado inicial: Robô fala a mensagem inicial
+                            // Exibe a mensagem inicial do robô e troca para o próximo estado
                             messageElement.style.visibility = "visible";
                             if (data.response) {
                                 speak(data.response); // Robô fala a mensagem inicial
@@ -438,9 +439,10 @@ async function initializeConversation() {
                                 console.error("Erro: Resposta da IA ausente.");
                                 messageElement.innerText = "No response received from the server.";
                             }
-                            speakButton.innerText = "Press to Speak"; // Atualiza para o próximo estado
+                            speakButton.innerText = "Press to Speak"; // Atualiza o texto do botão
                         } else if (speakButton.innerText === "Press to Speak") {
-                            recognition.start(); // Inicia o reconhecimento de voz
+                            // Inicia o reconhecimento de voz
+                            recognition.start();
                         }
                     });
                 }
