--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -400,7 +400,7 @@ function setupSpeechRecognition() {
             }
         });
 
-   // Inicialização da Conversa
+  // Inicialização da Conversa
 async function initializeConversation() {
     firebase.auth().onAuthStateChanged(async (user) => {
         if (user) {
@@ -421,25 +421,23 @@ async function initializeConversation() {
                 chatHistory = data.chatHistory || [];
                 messageElement.innerText = data.response;
 
-                // Exibe o botão "Press to Start" ao carregar
+                messageElement.style.visibility = "hidden";
+
+                // Configurar o botão para o estado inicial "Press to Start"
                 speakButton.style.display = "block";
                 speakButton.innerText = "Press to Start";
 
-                // Garante que o botão é inicializado apenas uma vez
+                // Garante que o botão só seja configurado uma vez
                 if (!speakButton.hasAttribute('data-initialized')) {
                     speakButton.setAttribute('data-initialized', 'true');
 
                     speakButton.addEventListener("click", () => {
                         if (speakButton.innerText === "Press to Start") {
-                            // Exibe a mensagem inicial do robô e troca para o próximo estado
+                            // Estado inicial: robô fala a mensagem inicial
                             messageElement.style.visibility = "visible";
-                            if (data.response) {
-                                speak(data.response); // Robô fala a mensagem inicial
-                            } else {
-                                console.error("Erro: Resposta da IA ausente.");
-                                messageElement.innerText = "No response received from the server.";
-                            }
-                            speakButton.innerText = "Press to Speak"; // Atualiza o texto do botão
+                            messageElement.innerText = data.response || "Welcome to the conversation!";
+                            speak(data.response || "Welcome to the conversation!"); // Faz o robô falar
+                            speakButton.innerText = "Press to Speak"; // Atualiza para o próximo estado
                         } else if (speakButton.innerText === "Press to Speak") {
                             // Inicia o reconhecimento de voz
                             recognition.start();
