--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -201,34 +201,17 @@ window.addEventListener("DOMContentLoaded", updateSliderBackground);
         }
 
              // Verifica Suporte ao Reconhecimento de Voz
-     function checkSpeechRecognitionSupport() {
-    if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
-        const fallbackInput = document.getElementById("fallback-input");
-        if (fallbackInput) fallbackInput.style.display = 'block';
-        speakButton.style.display = 'none';
-        messageElement.innerText = "Speech recognition is not supported. Please type your response below.";
-        messageElement.style.visibility = 'visible';
-        return false;
-    }
-
-    // Verifica a permissão para o microfone
-    if ('permissions' in navigator) {
-        navigator.permissions.query({ name: 'microphone' }).then(permissionStatus => {
-            if (permissionStatus.state === 'denied') {
-                messageElement.style.visibility = 'visible';
-                messageElement.innerText = "Microphone access is blocked. Please enable microphone permissions in your browser settings.";
+        function checkSpeechRecognitionSupport() {
+            if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
+                const fallbackInput = document.getElementById("fallback-input");
+                if (fallbackInput) fallbackInput.style.display = 'block';
                 speakButton.style.display = 'none';
-                console.warn("Microphone permission is blocked.");
+                messageElement.innerText = "Speech recognition is not supported. Please type your response below.";
+                messageElement.style.visibility = 'visible';
+                return false;
             }
-        }).catch(err => {
-            console.error("Error checking microphone permissions:", err);
-        });
-    } else {
-        console.warn("Permissions API is not supported in this browser.");
-    }
-
-    return true;
-}
+            return true;
+        }
 
 // Função para TTS (Text-to-Speech)
 function speak(text, lang = "en-US") {
@@ -255,8 +238,6 @@ function speak(text, lang = "en-US") {
         robotImg.src = ROBOT_GIF; // Muda para GIF durante a fala
         speakButton.innerText = "Samuel is talking"; // Atualiza o texto do botão
         speakButton.disabled = true; // Desativa o botão
-        messageElement.style.visibility = "visible";
-        messageElement.innerText = text; // Exibe o texto falado no campo
     };
 
     utterance.onend = () => {
@@ -291,7 +272,7 @@ ensureVoicesLoaded(() => {
 });
 
         // Configuração do Reconhecimento de Voz
-function setupSpeechRecognition() {
+      function setupSpeechRecognition() {
     if (!checkSpeechRecognitionSupport()) return;
 
     recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
@@ -301,21 +282,21 @@ function setupSpeechRecognition() {
         isSpeaking = true; // Indica que o usuário está falando
         resetStaticTimer(); // Reseta o temporizador de inatividade
         speakButton.classList.add("listening");
-        speakButton.innerText = "Listening..."; // Atualiza para indicar que está ouvindo
+        speakButton.innerText = "Listening...";
         console.log("User is speaking...");
     };
 
     recognition.onend = () => {
         isSpeaking = false; // Finaliza o estado de fala do usuário
         speakButton.classList.remove("listening");
-        speakButton.innerText = "Press to Speak"; // Retorna ao estado original
+        speakButton.innerText = "Press to Speak";
         console.log("User finished speaking.");
     };
 
     recognition.onresult = async (event) => {
         const userSpeech = event.results[0][0].transcript;
         messageElement.style.visibility = "visible";
-        messageElement.innerText = `You said: "${userSpeech}"`; // Exibe o texto reconhecido
+        messageElement.innerText = `You said: "${userSpeech}"`;
         console.log("User speech:", userSpeech);
 
         if (!userId) {
@@ -348,39 +329,6 @@ function setupSpeechRecognition() {
     };
 }
 
-    speakButton.addEventListener("click", () => {
-        if (speakButton.innerText === "Press to Start") {
-            // Estado inicial, exibe a mensagem inicial e troca o estado do botão
-            messageElement.style.visibility = "visible";
-            messageElement.innerText = "Samuel is talking...";
-            speakButton.innerText = "Press to Speak";
-        } else if (speakButton.innerText === "Press to Speak") {
-            // Verifica se o reconhecimento de voz inicia
-            let recognitionStarted = false;
-
-            recognition.start();
-
-            setTimeout(() => {
-                if (!recognitionStarted) {
-                    // Mostra a mensagem de erro se o reconhecimento não iniciar
-                    messageElement.style.visibility = "visible";
-                    messageElement.innerText = "Voice recognition did not start. Please check if the browser's speech recognition and microphone are enabled.";
-                    console.warn("Speech recognition failed to start.");
-                }
-            }, 2000);
-
-            recognition.onstart = () => {
-                recognitionStarted = true; // Marca que o reconhecimento iniciou
-                isSpeaking = true; // Indica que o usuário está falando
-                resetStaticTimer(); // Reseta o temporizador de inatividade
-                speakButton.classList.add("listening");
-                speakButton.innerText = "Listening...";
-                console.log("User is speaking...");
-            };
-        }
-    });
-}
-
         // Fallback para Mensagem Digitada
         document.addEventListener("DOMContentLoaded", () => {
             const fallbackInput = document.getElementById("fallback-input");
@@ -400,63 +348,62 @@ function setupSpeechRecognition() {
             }
         });
 
-  // Inicialização da Conversa
-async function initializeConversation() {
-    firebase.auth().onAuthStateChanged(async (user) => {
-        if (user) {
-            userId = user.uid;
-            console.log("User authenticated. User ID:", userId);
+        // Inicialização da Conversa
+        async function initializeConversation() {
+            firebase.auth().onAuthStateChanged(async (user) => {
+                if (user) {
+                    userId = user.uid;
+                    console.log("User authenticated. User ID:", userId);
 
-            const urlParams = new URLSearchParams(window.location.search);
-            const level = urlParams.get('level') || 'Level1';
-            const unit = urlParams.get('unit') || 'Unit1';
+                    const urlParams = new URLSearchParams(window.location.search);
+                    const level = urlParams.get('level') || 'Level1';
+                    const unit = urlParams.get('unit') || 'Unit1';
 
-            try {
-                const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
-                if (!response.ok) throw new Error("Failed to initialize conversation.");
+                    try {
+                        const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
+                        if (!response.ok) throw new Error("Failed to initialize conversation.");
 
-                const data = await response.json();
-                console.log("Server Response:", data);
+                        const data = await response.json();
+                        console.log("Server Response:", data);
 
-                chatHistory = data.chatHistory || [];
-                messageElement.innerText = data.response;
+                        chatHistory = data.chatHistory || [];
+                        messageElement.innerText = data.response;
 
-                messageElement.style.visibility = "hidden";
+                        messageElement.style.visibility = "hidden";
 
-                // Configurar o botão para o estado inicial "Press to Start"
-                speakButton.style.display = "block";
-                speakButton.innerText = "Press to Start";
+                        speakButton.style.display = "block";
 
-                // Garante que o botão só seja configurado uma vez
-                if (!speakButton.hasAttribute('data-initialized')) {
-                    speakButton.setAttribute('data-initialized', 'true');
+                        if (!speakButton.hasAttribute('data-initialized')) {
+                            speakButton.setAttribute('data-initialized', 'true');
 
-                    speakButton.addEventListener("click", () => {
-                        if (speakButton.innerText === "Press to Start") {
-                            // Estado inicial: robô fala a mensagem inicial
-                            messageElement.style.visibility = "visible";
-                            messageElement.innerText = data.response || "Welcome to the conversation!";
-                            speak(data.response || "Welcome to the conversation!"); // Faz o robô falar
-                            speakButton.innerText = "Press to Speak"; // Atualiza para o próximo estado
-                        } else if (speakButton.innerText === "Press to Speak") {
-                            // Inicia o reconhecimento de voz
-                            recognition.start();
-                        }
-                    });
-                }
-            } catch (error) {
-                console.error("Error initializing conversation:", error);
-                messageElement.innerText = "An unexpected error occurred. Try again later.";
-                speakButton.disabled = true;
-                messageElement.style.visibility = "visible";
-            }
-        } else {
-            console.warn("User is not logged in.");
-            messageElement.innerText = "Please log in to start the conversation.";
-            messageElement.style.visibility = "visible";
-        }
-    });
+                            speakButton.addEventListener("click", () => {
+                                if (speakButton.innerText === "Press to Start") {
+                                    messageElement.style.visibility = "visible";
+                                    if (data.response) {
+    speak(data.response);
+} else {
+    console.error("Erro: Resposta da IA ausente.");
+    messageElement.innerText = "No response received from the server.";
 }
+                                    speakButton.innerText = "Press to Speak";
+                                } else {
+                                    recognition.start();
+                                }
+                            });
+                        }
+                    } catch (error) {
+                        console.error("Error initializing conversation:", error);
+                        messageElement.innerText = "An unexpected error occurred. Try again later.";
+                        speakButton.disabled = true;
+                        messageElement.style.visibility = "visible";
+                    }
+                } else {
+                    console.warn("User is not logged in.");
+                    messageElement.innerText = "Please log in to start the conversation.";
+                    messageElement.style.visibility = "visible";
+                }
+            });
+        }
 
         // Configuração Inicial ao Carregar a Página
         window.onload = () => {
