--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -200,18 +200,18 @@ window.addEventListener("DOMContentLoaded", updateSliderBackground);
             robotImg.src = ROBOT_STATIC;
         }
 
-             // Verifica Suporte ao Reconhecimento de Voz
-        function checkSpeechRecognitionSupport() {
-            if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
-                const fallbackInput = document.getElementById("fallback-input");
-                if (fallbackInput) fallbackInput.style.display = 'block';
-                speakButton.style.display = 'none';
-                messageElement.innerText = "Speech recognition is not supported. Please type your response below.";
-                messageElement.style.visibility = 'visible';
-                return false;
-            }
-            return true;
-        }
+            function checkSpeechRecognitionSupport() {
+    if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
+        const fallbackInput = document.getElementById("fallback-input");
+        if (fallbackInput) fallbackInput.style.display = 'block';
+        speakButton.style.display = 'none';
+        messageElement.innerText = "Speech recognition is not supported or disabled in your browser. Please enable it or use the text input.";
+        messageElement.style.visibility = 'visible';
+        console.warn("Speech recognition is not supported or disabled in this browser.");
+        return false;
+    }
+    return true;
+}
 
 // Função para TTS (Text-to-Speech)
 function speak(text, lang = "en-US") {
