--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -334,7 +334,7 @@ ensureVoicesLoaded(() => {
         speakButton.innerText = "Press to Speak";
 
         // Tratamento de erros específicos
-        if (event.error === 'not-allowed') {
+        if (event.error === 'not-allowed (Check if your voice recognition and microphone are active)') {
             messageElement.innerText = "Microphone access is blocked. Please enable it to use speech recognition.";
         } else if (event.error === 'no-speech') {
             messageElement.innerText = "No speech detected. Please try again.";
